# KPM-cursor

./: .env  .gitignore  DOCKER.md  MESSAGE_BUS_INTEGRATION.md  OBSERVABILITY.md  broadcast-demo.js  check-sync-progress.sh  demo-explorer-verification.js  docker-compose.yml  monitor-kaspa-sync.sh  package-lock.json  package.json  quick-auth-test.js  replit.md  run-full-system-test.sh  simple-final-test.js  start-test-environment.sh  stop-test-environment.sh  test-company-wallet-system.ts  test-company-wallets.js  test-connection.exp  test-intelligent-payload.js  test-per-event.js  test-simple-wallet-system.ts  test-system-comprehensive.ts  test-testnet-integration.js  tsconfig.json  verify-events.js  working-final-test.js
.github/: ci-windows-recheck.txt
ci/: rotate-subkey.sh
docs/: GPG_SIGNING.md
k8s/: namespace.yaml  (+5 more)
kaspa_broadcaster/: .dockerignore  Cargo.toml  Dockerfile  account-title-test.exp  anchored_txs.json  broadcaster.mjs  complete-fixed-wallet.exp  complete-transaction-test.exp  complete-wallet-creator.exp  comprehensive-wallet-creator.exp  consumer-readable-events.json  core-transaction-test.exp  create-isolated-wallets-fixed.exp  create-one-wallet.exp  create-sample-company.exp  debug-comprehensive.exp  debug-transaction.mjs  debug-wallet-create.exp  direct-wallet-tx.mjs  discover-real-commands.exp  embed-op-return-wasm.mjs  embed-op-return.exp  embed-supply-chain-data.mjs  exact-pattern-wallet.exp  explore-cli-rpc.exp  explore-commands.exp  final-secure-wallet.exp  fix-timing-wallet.exp  fresh-start-test.exp  fund-company-wallet.exp  fund-new-company-wallet.exp  generate-isolated-wallets.exp  generate-new-company-wallet.exp  isolated_company_wallets.txt  isolated_company_wallets_final.txt  kaspa-cli-direct.sh  kaspa-cli-test.sh  kaspa-expect-fixed.exp  kaspa-expect.exp  large_payload.json  (+45 more)
kaspa_broadcaster/src/: main.rs
pea-agent/: Cargo.toml  QUICKSTART.md  SECURITY_WHITEPAPER.md  test-config.yaml  test_all.sh
pea-agent/.github/workflows/: release.yml
pea-agent/installers/linux/: build-deb.sh  build-rpm.sh  install.sh
pea-agent/installers/macos/: build-pkg.sh  install.sh
pea-agent/installers/windows/: install.ps1  pea-agent.wxs
pea-agent/src/: heartbeat.rs  main.rs  provision.rs  queue.rs  scanner.rs  tpm.rs  vault.rs
pea-agent/test-results/: master_test_report_20250807_112607.json  unit_tests_20250807_112607.txt
pea-agent/tests/: integration_tests.rs
pea-agent/tests/e2e/: test_runner.py
pea-agent/tests/installers/: test_installers.sh
pea-agent/tests/performance/: load_test.py
pea-agent/tests/security/: pentest_suite.py
(+303 files in other folders)
